# opengl-start

./: CMakeLists.txt  conanfile.txt  install  main.cpp  readme.md  run
conan_profiles/: linux
